integration/apps/ingresses/mef-sog-uc1.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mef-sog-uc1-ingress
  namespace: mef-sog-uc1-wl
  annotations:
#    nginx.org/proxy-connect-timeout: "60s"
#    nginx.org/proxy-read-timeout: "60s"
    nginx.org/client-max-body-size: "0"
#    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: mef-sog-uc1.integration
      http:
        paths:
          - backend:
              service:
                name: scheduled-client-entrypoint
                port:
                  number: 80
            path: /
            pathType: Prefix
